# tailwag_application_template

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
src/: lib.rs  main.rs
src/middleware/: log_request.rs  mod.rs
src/rest_endpoints/: todo.rs
src/tasks/: echo_request.rs  mod.rs
static/: index.md
