[package]
name = "tailwag_application_template"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
sqlx = "0.7.1"
tailwag = "0.2.0"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }


### PATCH TO LOCAL:
# Uncomment this block to use a local development version of tailwag instead of the published version.
#
# [patch.crates-io]
# tailwag = { path = "../tailwag/" }


### PATCH TO GIT:
# Uncomment this block to use the current development branch of tailwag instead of the published version.
#
# [patch.crates-io]
# tailwag = { git = "https://github.com/nikwithak/tailwag", branch = "develop" }
